--- a/builds/ci/dotnet.yaml
+++ b/builds/ci/dotnet.yaml
@@ -30,7 +30,9 @@ jobs:
             IotDevice2ConnStr2,
             IotDevice3ConnStr2,
             IotHubConnStr2,
-            IotHubMqttHeadCert
+            IotHubMqttHeadCert,
+            AKSClusterKubeconfig
+Versions
       - task: UseDotNet@2
         displayName: Install .NET Core sdk
         inputs:
@@ -72,17 +74,21 @@ jobs:
 #          echo "##vso[task.setvariable variable=PATH;]$AGENT_TOOLSDIRECTORY/kind:$PATH"
 #        displayName: Install Kubernetes cluster manager (kind)
 #        condition: succeededOrFailed()
-#      - script: |
-#          kind create cluster --name "edgy" --wait 5m
-#          KUBECONFIG=$(kind get kubeconfig-path --name "edgy")
+#     - script: |
+#          kind create cluster --name "edgy" --wait 5m         
 #          echo "##vso[task.setvariable variable=KUBECONFIG;]$KUBECONFIG"
-#          echo "##vso[task.setvariable variable=USE_EXISTING_KUBERNETES_CLUSTER;]true"
+#         echo "##vso[task.setvariable variable=USE_EXISTING_KUBERNETES_CLUSTER;]true"
 #        displayName: Create Kubernetes cluster (edgy)
+#        displayName: Set up AKS cluster config
 #        condition: succeededOrFailed()
-#      - script: |
-#          sudo -E bash -c './scripts/linux/runTests.sh "--filter $(test.filter)&Category=Kubernetes" $(Build.Configuration)'
-#        displayName: Kubernetes Integration Tests
-#        condition: succeededOrFailed()
+      - script: |
+          echo "##vso[task.setvariable variable=KUBECONFIG;]$KUBECONFIG"
+          echo "##vso[task.setvariable variable=USE_EXISTING_KUBERNETES_CLUSTER;]true"
+          sudo -E bash -c './scripts/linux/runTests.sh "--filter $(test.filter)&Category=Kubernetes" $(Build.Configuration)'
+        displayName: Kubernetes Integration Tests
+        condition: succeededOrFailed()     
+        env:
+        KUBECONFIG: $(AKSClusterKubeconfig)
       - task: PublishTestResults@2
         displayName: Publish test results
         inputs:
