--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -436,6 +436,7 @@ jobs:
           name: Functions Sample
           imageName: azureiotedge-functions-filter
           project: EdgeHubTriggerCSharp
+          arm32v7: 'false'
 
       # Direct Method Sender
       - template: templates/image-windows.yaml
