--- a/mqtt/mqtt3/Cargo.toml
+++ b/mqtt/mqtt3/Cargo.toml
@@ -20,7 +20,7 @@ serde = { version = "1.0", optional = true, features = ["derive"] }
 [dev-dependencies]
 env_logger = "0.7"
 structopt = "0.3"
-tokio = { version = "0.2", features = ["rt-core", "signal", "stream", "tcp"] }
+tokio = { version = "0.2", features = ["macros", "rt-core", "signal", "stream", "tcp"] }
 
 [features]
 serde1 = ["serde"]
