--- a/builds/misc/images-release.yaml
+++ b/builds/misc/images-release.yaml
@@ -1,4 +1,26 @@
---- 
+#Your build pipeline references a secret variable named ‘build.registry.password’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
+#Your build pipeline references a secret variable named ‘registry.password’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
+#Your build pipeline references the ‘configuration’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
+#Your build pipeline references a secret variable named ‘registry.password’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
+#Your build pipeline references the ‘version’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
+#Your build pipeline references the ‘configuration’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
+#Your build pipeline references a secret variable named ‘registry.password’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
+#Your build pipeline references the ‘version’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
+#Your build pipeline references the ‘configuration’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
+#Your build pipeline references a secret variable named ‘registry.password’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
+#Your build pipeline references the ‘version’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
+#Your build pipeline references a secret variable named ‘registry.password’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
+#Your build pipeline references the ‘version’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
+#Your build pipeline references a secret variable named ‘registry.password’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
+#Your build pipeline references the ‘version’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
+#Your build pipeline references a secret variable named ‘registry.password’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
+#Your build pipeline references the ‘version’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
+#Your build pipeline references a secret variable named ‘registry.password’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
+#Your build pipeline references the ‘version’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
+#Your build pipeline references a secret variable named ‘registry.password’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
+#Your build pipeline references the ‘version’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
+#Your build pipeline references a secret variable named ‘registry.password’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
+#Your build pipeline references the ‘version’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
 jobs: 
   - 
     DisplayName: LinuxDotnet
@@ -6,47 +28,38 @@ jobs:
     pool: 
       name: "Hosted Ubuntu 1604"
     steps: 
-      - 
-        bash: |
+      - bash: |
             docker login '$(build.registry.address)' --username '$(build.registry.user)' --password '$(build.registry.password)'
             docker login '$(registry.address)' --username '$(registry.user)' --password '$(registry.password)'
             displayName: 'Docker Login'
-      - 
-        displayName: "Install Rust"
+      - displayName: "Install Rust"
         inputs: 
           arguments: "--package-arm"
           filePath: ./edgelet/build/linux/install.sh
           targetType: filePath
         task: Bash@3
-      - 
-        bash: "echo \"##vso[task.setvariable variable=PATH;]$HOME/.cargo/bin:$PATH\""
+      - bash: "echo \"##vso[task.setvariable variable=PATH;]$HOME/.cargo/bin:$PATH\""
         displayName: "Modify path"
-      - 
-        displayName: "Install .NET Core - 3.1.3"
+      - displayName: "Install .NET Core - 3.1.3"
         inputs: 
           version: "3.1.201"
         task: DotNetCoreInstaller@0
-      - 
-        displayName: "Install build prerequisites"
+      - displayName: "Install build prerequisites"
         inputs: 
           scriptPath: scripts/linux/installPrereqs.sh
         task: ShellScript@2
-      - 
-        bash: "cargo install --git https://github.com/arsing/cross.git --branch set-path"
+      - bash: "cargo install --git https://github.com/arsing/cross.git --branch set-path"
         displayName: "Install cross (fork with docker fix)"
-      - 
-        displayName: "Build Azure-IoT-Edge-Core"
+      - displayName: "Build Azure-IoT-Edge-Core"
         inputs: 
           args: "-c Release"
           scriptPath: scripts/linux/buildBranch.sh
         task: ShellScript@2
-      - 
-        displayName: "Install .NET Core 2.1"
+      - displayName: "Install .NET Core 2.1"
         inputs: 
           version: "2.1.700"
         task: DotNetCoreInstaller@0
-      - 
-        displayName: "Edge Agent Code Sign"
+      - displayName: "Edge Agent Code Sign"
         inputs: 
           ConnectedServiceName: "Azure IoT Edge Code Sign 2"
           FolderPath: $(Build.BinariesDirectory)/publish/Microsoft.Azure.Devices.Edge.Agent.Service
@@ -101,8 +114,7 @@ jobs:
               ]
           signConfigType: inlineSignParams
         task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
-      - 
-        displayName: "Edge Hub Code Sign"
+      - displayName: "Edge Hub Code Sign"
         inputs: 
           ConnectedServiceName: "Azure IoT Edge Code Sign 2"
           FolderPath: $(Build.BinariesDirectory)/publish/Microsoft.Azure.Devices.Edge.Hub.Service
@@ -157,8 +169,7 @@ jobs:
               ]
           signConfigType: inlineSignParams
         task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
-      - 
-        displayName: "Temp Sensor Code Sign"
+      - displayName: "Temp Sensor Code Sign"
         inputs: 
           ConnectedServiceName: "Azure IoT Edge Code Sign 2"
           FolderPath: $(Build.BinariesDirectory)/publish/SimulatedTemperatureSensor
@@ -213,8 +224,7 @@ jobs:
               ]
           signConfigType: inlineSignParams
         task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
-      - 
-        displayName: "Functions Binding Code Sign"
+      - displayName: "Functions Binding Code Sign"
         inputs: 
           ConnectedServiceName: "Azure IoT Edge Code Sign 2"
           FolderPath: $(Build.BinariesDirectory)/publish/Microsoft.Azure.WebJobs.Extensions.EdgeHub
@@ -269,13 +279,11 @@ jobs:
               ]
           signConfigType: inlineSignParams
         task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
-      - 
-        displayName: "Install .NET Core - 3.1.3"
+      - displayName: "Install .NET Core - 3.1.3"
         inputs: 
           version: "3.1.201"
         task: DotNetCoreInstaller@0
-      - 
-        displayName: "Functions Binding nuget package"
+      - displayName: "Functions Binding nuget package"
         inputs: 
           buildProperties: OutDir=$(Build.BinariesDirectory)/publish/Microsoft.Azure.WebJobs.Extensions.EdgeHub
           command: pack
@@ -285,13 +293,11 @@ jobs:
           versionEnvVar: version
           versioningScheme: byEnvVar
         task: DotNetCoreCLI@2
-      - 
-        displayName: "Install .NET Core 2.1"
+      - displayName: "Install .NET Core 2.1"
         inputs: 
           version: "2.1.700"
         task: DotNetCoreInstaller@0
-      - 
-        displayName: "Functions Binding nuget package Sign"
+      - displayName: "Functions Binding nuget package Sign"
         inputs: 
           ConnectedServiceName: "Azure IoT Edge Code Sign 2"
           FolderPath: $(Build.BinariesDirectory)/publish
@@ -315,42 +321,35 @@ jobs:
               ]
           signConfigType: inlineSignParams
         task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
-      - 
-        displayName: "Build iotedge-diagnostics"
+      - displayName: "Build iotedge-diagnostics"
         inputs: 
           arguments: "-i azureiotedge-diagnostics -n microsoft -P iotedge-diagnostics -c $(Build.Configuration)"
           filePath: ./scripts/linux/buildEdgelet.sh
           targetType: filePath
         task: Bash@3
-      - 
-        bash: |
+      - bash: |
             scripts/linux/buildEdgelet.sh -i azureiotedge-diagnostics -n microsoft -P iotedge-diagnostics -c $(configuration) &&
             scripts/linux/buildImage.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(version) -i azureiotedge-diagnostics -n $(namespace) -P azureiotedge-diagnostics
             displayName: 'Build Image - azureiotedge-diagnostics - amd64'
-      - 
-        bash: |
+      - bash: |
             scripts/linux/buildEdgelet.sh -i azureiotedge-diagnostics -n microsoft -P iotedge-diagnostics -c $(configuration) --target-arch armv7l &&
             scripts/linux/buildImage.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(version) -i azureiotedge-diagnostics -n $(namespace) -P azureiotedge-diagnostics --target-arch armv7l
             displayName: 'Build Image - azureiotedge-diagnostics - ARM32'
-      - 
-        bash: |
+      - bash: |
             scripts/linux/buildEdgelet.sh -i azureiotedge-diagnostics -n microsoft -P iotedge-diagnostics -c $(configuration) --target-arch aarch64 &&
             scripts/linux/buildImage.sh -r $(registry.address) -u $(registry.user) -p $(registry.password) -v $(version) -i azureiotedge-diagnostics -n $(namespace) -P azureiotedge-diagnostics --target-arch aarch64
             displayName: 'Build Image - azureiotedge-diagnostics - ARM64'
-      - 
-        parameters: 
+      - parameters: 
           imageName: azureiotedge-agent
           name: "Edge Agent"
           project: Microsoft.Azure.Devices.Edge.Agent.Service
         template: templates/image-linux.yaml
-      - 
-        parameters: 
+      - parameters: 
           imageName: azureiotedge-hub
           name: "Edge Hub"
           project: Microsoft.Azure.Devices.Edge.Hub.Service
         template: templates/image-linux.yaml
-      - 
-        parameters: 
+      - parameters: 
           imageName: azureiotedge-simulated-temperature-sensor
           name: "Temperature Sensor"
           project: SimulatedTemperatureSensor
@@ -360,8 +359,7 @@ jobs:
       build.registry.user: EdgeBuilds
       registry.address: edgerelease.azurecr.io
       registry.user: EdgeRelease
-  - 
-    demands: 
+  - demands: 
       - "Build-Image -equals true"
       - win-rs5
       - DotNetFramework
@@ -370,28 +368,23 @@ jobs:
     name: Azure-IoT-Edge-Core
     pool: ~
     steps: 
-      - 
-        displayName: "Install .NET Core - 3.1.3"
+      - displayName: "Install .NET Core - 3.1.3"
         inputs: 
           version: "3.1.201"
         task: DotNetCoreInstaller@0
-      - 
-        displayName: "Build ($(Build.Configuration))"
+      - displayName: "Build ($(Build.Configuration))"
         name: build
         powershell: "scripts/windows/build/Publish-Branch.ps1 -Configuration:\"$(Build.Configuration)\" -PublishTests:$False -UpdateVersion"
-      - 
-        script: |
+      - script: |
             docker login $(build.registry.address) -u $(build.registry.user) -p $(build.registry.password)
             docker login $(registry.address) -u $(registry.user) -p $(registry.password)
             displayName: 'docker login'
-      - 
-        displayName: "Build iotedge-diagnostics"
+      - displayName: "Build iotedge-diagnostics"
         inputs: 
           filePath: ./edgelet/build/windows/build-diagnostics.ps1
           targetType: filePath
         task: PowerShell@2
-      - 
-        displayName: "azureiotedge-diagnostics Code Sign"
+      - displayName: "azureiotedge-diagnostics Code Sign"
         inputs: 
           ConnectedServiceName: "Azure IoT Edge Code Sign 2"
           FolderPath: $(Build.BinariesDirectory)\publish\azureiotedge-diagnostics
@@ -446,8 +439,7 @@ jobs:
               ]
           signConfigType: inlineSignParams
         task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
-      - 
-        displayName: "Edge Agent Code Sign"
+      - displayName: "Edge Agent Code Sign"
         inputs: 
           ConnectedServiceName: "Azure IoT Edge Code Sign 2"
           FolderPath: $(Build.BinariesDirectory)\publish\Microsoft.Azure.Devices.Edge.Agent.Service
@@ -502,8 +494,7 @@ jobs:
               ]
           signConfigType: inlineSignParams
         task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
-      - 
-        displayName: "Edge Hub Code Sign"
+      - displayName: "Edge Hub Code Sign"
         inputs: 
           ConnectedServiceName: "Azure IoT Edge Code Sign 2"
           FolderPath: $(Build.BinariesDirectory)\publish\Microsoft.Azure.Devices.Edge.Hub.Service
@@ -558,8 +549,7 @@ jobs:
               ]
           signConfigType: inlineSignParams
         task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
-      - 
-        displayName: "Temp Sensor Code Sign"
+      - displayName: "Temp Sensor Code Sign"
         inputs: 
           ConnectedServiceName: "Azure IoT Edge Code Sign 2"
           FolderPath: $(Build.BinariesDirectory)\publish\SimulatedTemperatureSensor
@@ -614,36 +604,31 @@ jobs:
               ]
           signConfigType: inlineSignParams
         task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
-      - 
-        displayName: "Build Image - Edge Agent - amd64"
+      - displayName: "Build Image - Edge Agent - amd64"
         inputs: 
           arguments: "-Name 'azureiotedge-agent' -Project 'Microsoft.Azure.Devices.Edge.Agent.Service' -Version '$(version)' -Registry '$(registry.address)' -Namespace '$(namespace)' -Push"
           filePath: ./scripts/windows/build/Publish-DockerImage.ps1
           targetType: filePath
         task: PowerShell@2
-      - 
-        displayName: "Build Image - Edge Hub - amd64"
+      - displayName: "Build Image - Edge Hub - amd64"
         inputs: 
           arguments: "-Name 'azureiotedge-hub' -Project 'Microsoft.Azure.Devices.Edge.Hub.Service' -Version '$(version)' -Registry '$(registry.address)' -Namespace '$(namespace)' -Push"
           filePath: ./scripts/windows/build/Publish-DockerImage.ps1
           targetType: filePath
         task: PowerShell@2
-      - 
-        displayName: "Build Image - Temp Sensor - amd64"
+      - displayName: "Build Image - Temp Sensor - amd64"
         inputs: 
           arguments: "-Name 'azureiotedge-simulated-temperature-sensor' -Project 'SimulatedTemperatureSensor' -Version '$(version)' -Registry '$(registry.address)' -Namespace '$(namespace)' -Push"
           filePath: ./scripts/windows/build/Publish-DockerImage.ps1
           targetType: filePath
         task: PowerShell@2
-      - 
-        displayName: "Build Image - azureiotedge-diagnostics - amd64"
+      - displayName: "Build Image - azureiotedge-diagnostics - amd64"
         inputs: 
           arguments: "-Name 'azureiotedge-diagnostics' -Project 'azureiotedge-diagnostics' -Version '$(version)' -Registry '$(registry.address)' -Namespace '$(namespace)' -Push"
           filePath: ./scripts/windows/build/Publish-DockerImage.ps1
           targetType: filePath
         task: PowerShell@2
-      - 
-        displayName: "Publish Artifacts to VSTS"
+      - displayName: "Publish Artifacts to VSTS"
         inputs: 
           ArtifactName: publish-win
           PathtoPublish: $(Build.BinariesDirectory)\publish
