--- a/builds/misc/images-release.yaml
+++ b/builds/misc/images-release.yaml
@@ -22,8 +22,8 @@
 #Your build pipeline references a secret variable named ‘registry.password’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
 #Your build pipeline references the ‘version’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
 jobs: 
-  - displayName: LinuxDotnet
-    job: linux_dotnet_projects
+  - job: linux_dotnet_projects
+    displayName: LinuxDotnet
     pool: 
       name: "Hosted Ubuntu 1604"
     steps: 
