made listening port configurable

--- a/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
+++ b/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
@@ -29,6 +29,9 @@
     "enabled": true,
     "port": 443
   },
+  "authAgentSettings": {
+    "address": "http://localhost:7120/authenticate/"
+  },
   "IotHubConnectionPoolSize": 1,
   "IotHubConnectionString": "",
   "mqttTopicNameConversion": {
