--- a/builds/misc/packages.yaml
+++ b/builds/misc/packages.yaml
@@ -141,6 +141,8 @@ jobs:
           $version = ("{0}{1}" -f $base_version, $(Build.BuildNumber))
           Write-Host ("##vso[task.setvariable variable=VERSION;]$version")
           Write-Host ("##vso[task.setvariable variable=NO_VALGRIND;]true")
+          echo "base_version=$(base_version)"
+          echo "version=$(version)"
         displayName: Set Version
       - powershell: edgelet/build/windows/install.ps1
         displayName: Install Rust
