--- a/test/modules/ModuleLib/Microsoft.Azure.Devices.Edge.ModuleUtil.csproj
+++ b/test/modules/ModuleLib/Microsoft.Azure.Devices.Edge.ModuleUtil.csproj
@@ -17,6 +17,7 @@
     <CodeAnalysisRuleSet>..\..\..\stylecop.ruleset</CodeAnalysisRuleSet>
     <RootNamespace>Microsoft.Azure.Devices.Edge.ModuleUtil</RootNamespace>
     <AssemblyName>Microsoft.Azure.Devices.Edge.ModuleUtil</AssemblyName>
+    <Configurations>Debug;Release;CheckInBuild</Configurations>
   </PropertyGroup>  
   <Import Project="..\..\..\stylecop.props" />
 </Project>
