--- a/builds/misc/packages.yaml
+++ b/builds/misc/packages.yaml
@@ -138,7 +138,11 @@ jobs:
     steps:
       - powershell: |
           $base_version = Get-Content -Path "$(Build.SourcesDirectory)\edgelet\version.txt"
-          $version = ("{0}{1}" -f $base_version, $(Build.BuildNumber))
+          if ($base_version -like '*~*') {
+            $version = ("{0}{1}" -f $base_version, $(Build.BuildNumber))
+          } else {
+              $version = $base_version
+          }
           Write-Host ("##vso[task.setvariable variable=VERSION;]$version")
           Write-Host ("##vso[task.setvariable variable=NO_VALGRIND;]true")
           echo "base_version=$base_version"
