--- a/.github/workflows/nightly-merge.yml
+++ b/.github/workflows/nightly-merge.yml
@@ -19,5 +19,7 @@ jobs:
         stable_branch: 'master'
         development_branch: 'iiot'
         allow_ff: false
+        push_token: 'IIOT_NIGHTLY_MERGE_PUSH_TOKEN'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        IIOT_NIGHTLY_MERGE_PUSH_TOKEN: ${{ secrets.IIOT_NIGHTLY_MERGE_PUSH_TOKEN }}
