changed HttpListener to kestrel code review feedbacks

--- a/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
+++ b/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
@@ -30,7 +30,9 @@
     "port": 443
   },
   "authAgentSettings": {
-    "address": "http://localhost:7120/authenticate/"
+    "enabled": true,
+    "port": 7120,
+    "baseUrl": "/authenticate/"
   },
   "IotHubConnectionPoolSize": 1,
   "IotHubConnectionString": "",
