Fixed CheckInBuild analysis rules

--- a/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.csproj
+++ b/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <Configurations>Debug;Release;CheckInBuild</Configurations>
+    <HighEntropyVA>true</HighEntropyVA>
   </PropertyGroup>
 
   <ItemGroup>
