--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -13,7 +13,7 @@ jobs:
     pool:
       vmImage: 'ubuntu-16.04'
     steps:
-      - template: templates/install-dotnet3.yaml
+      - template: ../templates/install-dotnet3.yaml
 
       - bash: 'docker login $(registry.address) --username $(registry.user) --password $(registry.password)'
         displayName: 'Docker Login'
