--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -203,7 +203,7 @@ jobs:
     variables:
       NetCorePackageUri: https://download.visualstudio.microsoft.com/download/pr/56131147-65ea-47d6-a945-b0296c86e510/44b43b7cb27d55081e650b9a4188a419/dotnet-sdk-3.1.201-win-x64.exe
     steps:
-      - template: templates/install-dotnet3.yaml
+      - template: ../templates/install-dotnet3.yaml
 
       - script: echo $(registry.password)|docker login "edgebuilds.azurecr.io" -u "$(registry.user)" --password-stdin
         displayName: Docker Login
