--- a/builds/ci/dotnet.yaml
+++ b/builds/ci/dotnet.yaml
@@ -7,7 +7,6 @@ trigger:
 pr: none
 variables:
   build.configuration: Release
-  dotnet.version: 3.1.201
   test.filter: Category=Integration&Category!=Stress
 jobs:
   - job: linux
@@ -31,11 +30,7 @@ jobs:
             IotDevice3ConnStr2,
             IotHubConnStr2,
             IotHubMqttHeadCert
-      - task: UseDotNet@2
-        displayName: Install .NET Core sdk
-        inputs:
-          packageType: sdk
-          version: $(dotnet.version)
+      - template: ../templates/install-dotnet3.yaml
       - task: Bash@3
         displayName: Install Prerequisites needed for RocksDB integration tests
         inputs:
@@ -111,11 +106,7 @@ jobs:
             IotDevice3ConnStr2,
             IotHubConnStr2,
             IotHubMqttHeadCert
-      - task: UseDotNet@2
-        displayName: Install .NET Core sdk
-        inputs:
-          packageType: sdk
-          version: $(dotnet.version)
+      - template: ../templates/install-dotnet3.yaml
       - powershell: scripts/windows/build/Publish-Branch.ps1 -Configuration $(Build.Configuration) -UpdateVersion
         displayName: Build
       - powershell: scripts/windows/test/Test-Branch.ps1 -Filter "$(test.filter)&Category!=Kubernetes" -BuildConfig $(Build.Configuration)
