--- a/builds/misc/images-release.yaml
+++ b/builds/misc/images-release.yaml
@@ -31,34 +31,32 @@ jobs:
             docker login '$(build.registry.address)' --username '$(build.registry.user)' --password '$(build.registry.password)'
             docker login '$(registry.address)' --username '$(registry.user)' --password '$(registry.password)'
             displayName: 'Docker Login'
-      - displayName: "Install Rust"
+      - task: Bash@3
+        displayName: "Install Rust"
         inputs: 
           arguments: "--package-arm"
           filePath: ./edgelet/build/linux/install.sh
           targetType: filePath
-        task: Bash@3
       - bash: "echo \"##vso[task.setvariable variable=PATH;]$HOME/.cargo/bin:$PATH\""
         displayName: "Modify path"
-      - displayName: "Install .NET Core - 3.1.3"
-        inputs: 
-          version: "3.1.201"
-        task: DotNetCoreInstaller@0
-      - displayName: "Install build prerequisites"
+      - template: ../templates/install-dotnet3.yaml
+      - task: ShellScript@2
+        displayName: "Install build prerequisites"
         inputs: 
           scriptPath: scripts/linux/installPrereqs.sh
-        task: ShellScript@2
       - bash: "cargo install --git https://github.com/arsing/cross.git --branch set-path"
         displayName: "Install cross (fork with docker fix)"
-      - displayName: "Build Azure-IoT-Edge-Core"
+      - task: ShellScript@2
+        displayName: "Build Azure-IoT-Edge-Core"
         inputs: 
           args: "-c Release"
           scriptPath: scripts/linux/buildBranch.sh
-        task: ShellScript@2
-      - displayName: "Install .NET Core 2.1"
+      - task: DotNetCoreInstaller@0
+        displayName: "Install .NET Core 2.1"
         inputs: 
           version: "2.1.700"
-        task: DotNetCoreInstaller@0
-      - displayName: "Edge Agent Code Sign"
+      - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
+        displayName: "Edge Agent Code Sign"
         inputs: 
           ConnectedServiceName: "Azure IoT Edge Code Sign 2"
           FolderPath: $(Build.BinariesDirectory)/publish/Microsoft.Azure.Devices.Edge.Agent.Service
@@ -112,8 +110,8 @@ jobs:
                 }
               ]
           signConfigType: inlineSignParams
-        task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
-      - displayName: "Edge Hub Code Sign"
+      - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
+        displayName: "Edge Hub Code Sign"
         inputs: 
           ConnectedServiceName: "Azure IoT Edge Code Sign 2"
           FolderPath: $(Build.BinariesDirectory)/publish/Microsoft.Azure.Devices.Edge.Hub.Service
@@ -167,8 +165,8 @@ jobs:
                 }
               ]
           signConfigType: inlineSignParams
-        task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
-      - displayName: "Temp Sensor Code Sign"
+      - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
+        displayName: "Temp Sensor Code Sign"
         inputs: 
           ConnectedServiceName: "Azure IoT Edge Code Sign 2"
           FolderPath: $(Build.BinariesDirectory)/publish/SimulatedTemperatureSensor
@@ -222,8 +220,8 @@ jobs:
                 }
               ]
           signConfigType: inlineSignParams
-        task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
-      - displayName: "Functions Binding Code Sign"
+      - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
+        displayName: "Functions Binding Code Sign"
         inputs: 
           ConnectedServiceName: "Azure IoT Edge Code Sign 2"
           FolderPath: $(Build.BinariesDirectory)/publish/Microsoft.Azure.WebJobs.Extensions.EdgeHub
@@ -277,11 +275,10 @@ jobs:
                 }
               ]
           signConfigType: inlineSignParams
-        task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
-      - displayName: "Install .NET Core - 3.1.3"
+      - task: DotNetCoreInstaller@0
+        displayName: "Install .NET Core - 3.1.3"
         inputs: 
           version: "3.1.201"
-        task: DotNetCoreInstaller@0
       - displayName: "Functions Binding nuget package"
         inputs: 
           buildProperties: OutDir=$(Build.BinariesDirectory)/publish/Microsoft.Azure.WebJobs.Extensions.EdgeHub
