--- a/builds/misc/images-release.yaml
+++ b/builds/misc/images-release.yaml
@@ -355,12 +355,12 @@ jobs:
       build.registry.user: EdgeBuilds
       registry.address: edgerelease.azurecr.io
       registry.user: EdgeRelease
-  - demands: 
+  - job: windows
+    demands: 
       - "Build-Image -equals true"
       - win-rs5
       - DotNetFramework
     displayName: Windows
-    job: windows
     name: Azure-IoT-Edge-Core
     pool: ~
     steps: 
