--- a/builds/misc/packages.yaml
+++ b/builds/misc/packages.yaml
@@ -207,6 +207,8 @@ jobs:
           }
           Write-Host ("##vso[task.setvariable variable=VERSION;]$version")
           Write-Host ("##vso[task.setvariable variable=NO_VALGRIND;]true")
+          echo "base_version=$base_version"
+          echo "version=$version"
         displayName: Set Version
       - powershell: edgelet/build/windows/install.ps1 -Arm
         displayName: Install Rust
