--- a/mqtt/mqtt-broker/Cargo.toml
+++ b/mqtt/mqtt-broker/Cargo.toml
@@ -57,3 +57,13 @@ harness = false
 [[bench]]
 name = "dispatch_messages"
 harness = false
+required-features = ["__internal_broker_callbacks"]
+
+[features]
+default = []
+
+# Internal (PRIVATE!) features used to aid testing.
+# Don't rely on these whatsoever. They may disappear at anytime.
+
+# When enabled, adds additional broker callback to measure processing time
+__internal_broker_callbacks = []
