require tokio multi-threaded runtime for becnhes

--- a/mqtt/mqtt-broker/Cargo.toml
+++ b/mqtt/mqtt-broker/Cargo.toml
@@ -57,7 +57,7 @@ harness = false
 [[bench]]
 name = "dispatch_messages"
 harness = false
-required-features = ["__internal_broker_callbacks"]
+required-features = ["__internal_broker_callbacks", "tokio/rt-threaded"]
 
 [features]
 default = []
