Update release/1.0.9 with new base images for Window IoT Core 10.0.17763.1158 on ARM32 (#2877)
- Update Window IoT Core base image to Os Version 10.0.17763.1158 for ARM32v7
- Fixing versioning for Window edgelet build tooling on 1.0.9 branch
- Fixing out of space on the image build pipeline test agents by pruning cached image on 1.0.9 branch
- Disabling Code Coverage for iotedged Checkin on 1.0.9 branch

--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -32,6 +32,11 @@ jobs:
       - bash: 'cargo install --git https://github.com/arsing/cross.git --branch set-path'
         displayName: 'Install cross (fork with docker fix)'
 
+      # Remove pre-installed cached images to free up more memory
+      # https://github.com/actions/virtual-environments/blob/master/images/linux/Ubuntu1604-README.md
+      - bash: 'docker system prune -af --volumes'
+        displayName: 'Clean up cached docker images'
+
       - script: scripts/linux/buildBranch.sh -c $(Build.Configuration) --no-rocksdb-bin --os Unix --dotnet_runtime netcoreapp3.0
         name: build
         displayName: Build ($(Build.Configuration))
@@ -182,6 +187,11 @@ jobs:
 
       - bash: 'cargo install --git https://github.com/arsing/cross.git --branch set-path'
         displayName: 'Install cross (fork with docker fix)'
+
+      # Remove pre-installed cached images to free up more memory
+      # https://github.com/actions/virtual-environments/blob/master/images/linux/Ubuntu1804-README.md
+      - bash: 'docker system prune -af --volumes'
+        displayName: 'Clean up cached docker images'
 
       - script: scripts/linux/buildBranch.sh -c $(Build.Configuration) --no-rocksdb-bin
         name: build
