--- a/builds/misc/packages.yaml
+++ b/builds/misc/packages.yaml
@@ -138,7 +138,15 @@ jobs:
     steps:
       - powershell: |
           $base_version = Get-Content -Path "$(Build.SourcesDirectory)\edgelet\version.txt"
-          $version = ("{0}{1}" -f $base_version, $(Build.BuildNumber))
+          # Windows versions has a range from 0.0.0.0 to FFFF.FFFF.FFFF.FFFF
+          # Only using the numerical versioning before ~dev as a verison prefix
+          if ($base_version -like '*~*') {
+            $version = ("{0}{1}" -f $base_version, $(Build.BuildNumber))
+          } else {
+            $version = $base_version
+          }
+          echo "base_version=$base_version"
+          echo "version=$version"
           Write-Host ("##vso[task.setvariable variable=VERSION;]$version")
           Write-Host ("##vso[task.setvariable variable=NO_VALGRIND;]true")
         displayName: Set Version
@@ -194,7 +202,15 @@ jobs:
     steps:
       - powershell: |
           $base_version = Get-Content -Path "$(Build.SourcesDirectory)\edgelet\version.txt"
-          $version = ("{0}{1}" -f $base_version, $(Build.BuildNumber))
+          # Windows versions has a range from 0.0.0.0 to FFFF.FFFF.FFFF.FFFF
+          # Only using the numerical versioning before ~dev as a verison prefix
+          if ($base_version -like '*~*') {
+            $version = ("{0}{1}" -f $base_version, $(Build.BuildNumber))
+          } else {
+            $version = $base_version
+          }
+          echo "base_version=$base_version"
+          echo "version=$version"
           Write-Host ("##vso[task.setvariable variable=VERSION;]$version")
           Write-Host ("##vso[task.setvariable variable=NO_VALGRIND;]true")
         displayName: Set Version
